--- a/Code Templates/HTML/CSS/prison.css
+++ b/Code Templates/HTML/CSS/prison.css
@@ -21,3 +21,18 @@ main {
     text-align: left;
     font-family: 'Cabin', sans-serif;
 }
+@media only screen and (max-width: 380px) {
+    #title {
+        margin-top: 30px;
+    }
+
+    p {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
+@media only screen and (min-width: 381px) {
+    #title {
+        color: aqua;
+    }
+}
