final projecyt updaate

--- a/Final Project/HTML/GenshinStyle.css
+++ b/Final Project/HTML/GenshinStyle.css
@@ -37,6 +37,7 @@
         padding-left: 30px;
         padding-right: 30px;
         color: #e1d4c6;
+        font-family: 'Philosopher', sans-serif;
     }
 }
 @media screen and (max-width: 932px) {
