--- a/Final Project/HTML/GenshinSearch.css
+++ b/Final Project/HTML/GenshinSearch.css
@@ -80,4 +80,7 @@ nav ul {
                 color: #e1d4c6;
                 height: 100%;
             }
-            
+            .Lumine-Idle{
+                width: 600px;
+                height: 600px;
+            }
