--- a/Final Project/HTML/GenshinAnalysis.css
+++ b/Final Project/HTML/GenshinAnalysis.css
@@ -13,7 +13,7 @@ html {
 .horizontal p {
     color: beige;
     flex: 0 0 auto;
-    font-size: large;
+    font-size: xx-large;
     width: calc(50% - 20px); /* Adjust the width based on your preference */
     margin-top: 5vh;
     margin-left: 50vh;
@@ -52,19 +52,31 @@ html {
 
 /*Lumine running animations*/
 .Lumine-Idle{
-    margin-top: 20vh;
-    margin-left: 10vh;
-    width: 400px;
-    height: 400px;
+    margin-top: 35vh;
+    margin-left: 15vh;
+    width: 600px;
+    height: 600px;
 }
 .Lumine-Run{
-    margin-top: 20vh;
-    margin-left: 10vh;
-    width: 400px;
-    height: 400px;
+    margin-top: 35vh;
+    margin-left: 15vh;
+    width: 600px;
+    height:600px;
 }
+/* Progress bar container */
+.progress-container {
+    width: 100%;
+    background-color: white;
+  }
+  
+  /* Progress bar */
+  .progress-bar {
+    height: 5px;
+    background-color: black;
+    width: 0;
+  }
 /*buttons*/
-.rounded-button, .home-button {
+/* .rounded-button, .home-button {
     height: 50px;
     width: 100%;
     margin-top: 5vh;
@@ -96,4 +108,4 @@ html {
     background-color: #485365;
     color: #e1d4c6;
     font-family: 'Philosopher', sans-serif;
-}
+} */
