--- a/Final Project/HTML/GenshinAnalysis.css
+++ b/Final Project/HTML/GenshinAnalysis.css
@@ -1,3 +1,38 @@
+.title p{
+    width: 700px;
+}
+.title{
+    margin-left: 50vh;
+}
+.title-button{
+    width:25%;
+    background-color: white;
+    border: solid 2px black;
+    border-radius: 200px;
+    transition: color 0.5s ,all 1s;
+}
+.title-button:hover{
+    width:50%;
+    background-color: black;
+    color: white;
+    border: solid 2px black;
+    border-radius: 200px;
+}
+.invisible, .hidden{
+    opacity: 0;
+    filter: blur(5px);
+    /* transform: translateX(100%); */
+    transition: all 2.5s;
+}
+.visible, .show{
+    opacity:1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+.fade-out {
+    opacity: 0;
+    transition: opacity 2s ease-out;
+}
 html {
     /* Set background properties */
     background-image: url('GenshinBackground.png'); /* Replace 'your-background-image-url.jpg' with your image URL */
@@ -63,48 +98,18 @@ html {
     width: 600px;
     height:600px;
 }
-/* Progress bar container */
+/* Progress Bar */
 .progress-container {
     width: 100%;
-    height: 8px;
-    background: white;
+    background-color: #f3f3f3;
+    position: fixed;
+    bottom: 0;
+    z-index: 9999;
 }
+
 .progress-bar {
-    height: 8px;
-    background: black;
-    width: 0%;
+    height: 5px;
+    background-color: black;
+    width: 0; /* Initial width set to 0 */
+    transition: width 0.2s ease-in-out;
 }
-/*buttons*/
-/* .rounded-button, .home-button {
-    height: 50px;
-    width: 100%;
-    margin-top: 5vh;
-    margin-left: 15vh;
-    border-radius: 50px;
-    background-color: #D8CDB9;
-    color: #485365;
-    border: solid #CCBB9A;
-    font-size: 15px;
-    cursor: pointer;
-    font-family: 'Philosopher', sans-serif;
-    transition: background-color 0.3s;
-    font-weight: bold;
-}
-.home-button {
-    height: 100px;
-    width: 100%;
-    background-color: white;
-    color: black;
-    font-family: 'Philosopher', sans-serif;
-    border: solid black;
-}
-    .home-button:hover {
-        background-color: black;
-        color: white;
-        font-family: 'Philosopher', sans-serif;
-    }
-#genshin:hover {
-    background-color: #485365;
-    color: #e1d4c6;
-    font-family: 'Philosopher', sans-serif;
-} */
